--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-admin-date-inputs",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "react-admin-date-inputs",
   "main": "lib/index.js",
   "author": "vascofg",
@@ -44,13 +44,13 @@
     "aor-component"
   ],
   "peerDependencies": {
-    "@material-ui/core": "^1.4.0",
-    "react": "^16.3.0",
-    "prop-types": "^15.6.0",
-    "react-admin": "^2.1.0"
+    "@material-ui/core": "^4.2.1",
+    "react": "^16.8.0",
+    "prop-types": "^15.6.1",
+    "react-admin": "^3.0.0-alpha.2"
   },
   "dependencies": {
-    "date-fns": "2.0.0-alpha.16",
-    "material-ui-pickers": "1.0.0-rc.17"
+    "@date-io/date-fns": "^1.3.9",
+    "@material-ui/pickers": "^3.2.2"
   }
 }
