--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-admin-date-inputs",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "react-admin-date-inputs",
   "main": "lib/index.js",
   "author": "vascofg",
@@ -50,7 +50,6 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.0.1",
-    "date-fns": "2.0.0-alpha.25",
-    "material-ui-pickers": "^2.1.1"
+    "@material-ui/pickers": "^3.2.2"
   }
 }
